--- a/03 - CSS Variables/index.html
+++ b/03 - CSS Variables/index.html
@@ -11,10 +11,10 @@
 
   <div class="controls">
     <label for="spacing">Spacing:</label>
-    <input id="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
+    <input id="spacing" type="range" name="spacing" min="10" max="200" value="20" data-sizing="px">
 
     <label for="blur">Blur:</label>
-    <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
+    <input id="blur" type="range" name="blur" min="0" max="25" value="1" data-sizing="px">
 
     <label for="base">Base Color</label>
     <input id="base" type="color" name="base" value="#ffc600">
@@ -27,10 +27,10 @@
     CSS variables need to be declared on some sort of element.  root is the highest level you can get
     */
     :root {
-      /* setting default variables here */
+      /* setting default variables here. -- is the symbol used to denote a variable */
       --base: #ffc600;
-      --spacing: 10px;
-      --blur: 10px;
+      --spacing: 20px;
+      --blur: 1px;
     }
 
     img {
@@ -67,21 +67,22 @@
 
   <script>
     function handleUpdate() {
-      console.log(this)
-      console.log(this.value)
-      console.log(this.dataset) // object that contains all data- attributes from that specific element
-      console.log(this.name)
+      // console.log(this)
+      // console.log(this.name)
+      // console.log(this.value)
+      console.log(this.dataset) // The object that contains all data attributes from that specific element. 
+      //Data attributes can be created with prefix 'data-[name]'
 
-      const suffix = this.dataset.sizing || ''; //set to nothing if attribute doesn't exist for that element
+      const suffix = this.dataset.sizing || ''; //set to nothing if data attribute doesn't exist for that element.  For two of the inputs, suffix will be required to change the css variable
       document.documentElement.style.setProperty(`--${this.name}`, this.value + suffix)
 
     }
 
     //select all inputs on page, will return a Node List
     const inputs = document.querySelectorAll('.controls input')
-    //listening for 'change' and mouseover event
+    //listening for 'change' and 'mousemove' event
     inputs.forEach(input => input.addEventListener('change', handleUpdate))
-    inputs.forEach(input => input.addEventListener('mouseover', handleUpdate))
+    inputs.forEach(input => input.addEventListener('mousemove', handleUpdate))
   </script>
 
 </body>
